
AM_CFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libnovemberizing-net.a

libnovemberizing_net_a_SOURCES = descriptor.c \
                                 socket.c     \
                                 client.c     \
                                 server.c     \
                                 session.c    \
                                 poll.c
